--- a/src/app/Components/admin/admin-home/admin-home.component.html
+++ b/src/app/Components/admin/admin-home/admin-home.component.html
@@ -2,7 +2,7 @@
     <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/assets/carousel-1.jpg" alt="First slide">
+      <img class="d-block w-100" src="/assets/carouselA.jpg" alt="First slide">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
         <div class="p-3" style="max-width: 900px;">
             <h4 class="text-white text-uppercase mb-md-4">Laundry & Dry Cleaning</h4>
@@ -12,7 +12,7 @@
     </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/assets/carousel-2.jpg" alt="Second slide">
+      <img class="d-block w-100" src="/assets/carouselB.jpg" alt="Second slide">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
         <div class="p-3" style="max-width: 900px;">
             <h4 class="text-white text-uppercase mb-md-4">Laundry & Dry Cleaning</h4>
