changes image location

--- a/src/app/Components/admin/adminPages/blog-detail/blog-detail.component.html
+++ b/src/app/Components/admin/adminPages/blog-detail/blog-detail.component.html
@@ -28,15 +28,15 @@
                 </div>
             </div>
             <div class="mb-5">
-                <img src="../../../../../assets/carousel-1.jpg" alt="blog-image" class="img-fluid w-100 mb-4">
+                <img src="assets/carousel-1.jpg" alt="blog-image" class="img-fluid w-100 mb-4">
                 <p>Sadipscing labore amet rebum est et justo gubergren. Et eirmod ipsum sit diam ut magna lorem. Nonumy vero labore lorem sanctus rebum et lorem magna kasd, stet amet magna accusam consetetur eirmod. Kasd accusam sit ipsum sadipscing et at at sanctus et. Ipsum sit gubergren dolores et, consetetur justo invidunt at et aliquyam ut et vero clita. Diam sea sea no sed dolores diam nonumy, gubergren sit stet no diam kasd vero.</p>
 
                 <p>Voluptua est takimata stet invidunt sed rebum nonumy stet, clita aliquyam dolores vero stet consetetur elitr takimata rebum sanctus. Sit sed accusam stet sit nonumy kasd diam dolores, sanctus lorem kasd duo dolor dolor vero sit et. Labore ipsum duo sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo et, clita lorem sit vero amet amet est dolor elitr, stet et no diam sit. Dolor erat justo dolore sit invidunt.</p>
                 <h2 class="mb-4">Est dolor lorem et ea</h2>
-                <img src="../../../../../assets/blog-1.jpg" alt="image" class="img-fluid w-50 float-start me-4 mb-3">
+                <img src="assets/blog-1.jpg" alt="image" class="img-fluid w-50 float-start me-4 mb-3">
                 <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos. Accusam eirmod kasd lorem clita sanctus ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem dolore, elitr aliquyam takimata sea kasd dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no. Rebum voluptua magna eos magna, justo gubergren labore sit voluptua eos.</p>
                 <h3 class="mb-4">Est dolor lorem et ea</h3>
-                <img src="../../../../../assets/blog-2.jpg" alt="image" class="img-fluid w-50 float-end ml-4 mb-3">
+                <img src="assets/blog-2.jpg" alt="image" class="img-fluid w-50 float-end ml-4 mb-3">
                 <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos. Accusam eirmod kasd lorem clita sanctus ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem dolore, elitr aliquyam takimata sea kasd dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no.</p>
             </div>
 <!-- /////////////////// owl carousel start //////// -->
@@ -48,7 +48,7 @@
                         <div class="owl-item cloned" style="width: 350px; margin-right: 30px;">
                             <div class="bg-light">
                                 <div class="position-relative">
-                                    <img src="../../../../../assets/blog-1.jpg" alt="image" class="img-fluid w-100">
+                                    <img src="assets/blog-1.jpg" alt="image" class="img-fluid w-100">
                                     <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                         <h4 class="text-center text-white font-weight-medium mb-3;">Dolor site amet clita kasd sanct ipsum</h4>
                                         <div class="d-flex text-light">
@@ -66,7 +66,7 @@
                         <div class="owl-item cloned" style="width: 350px; margin-right: 30px;">
                             <div class="bg-light">
                                 <div class="position-relative">
-                                    <img src="../../../../../assets/blog-2.jpg" alt="image" class="img-fluid w-100">
+                                    <img src="assets/blog-2.jpg" alt="image" class="img-fluid w-100">
                                     <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                         <h4 class="text-center text-white font-weight-medium mb-3;">Dolor site amet clita kasd sanct ipsum</h4>
                                         <div class="d-flex text-light">
@@ -84,7 +84,7 @@
                         <div class="owl-item cloned" style="width: 350px; margin-right: 30px;">
                             <div class="bg-light">
                                 <div class="position-relative">
-                                    <img src="../../../../../assets/blog-3.jpg" alt="image" class="img-fluid w-100">
+                                    <img src="assets/blog-3.jpg" alt="image" class="img-fluid w-100">
                                     <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                         <h4 class="text-center text-white font-weight-medium mb-3;">Dolor site amet clita kasd sanct ipsum</h4>
                                         <div class="d-flex text-light">
@@ -102,7 +102,7 @@
                         <div class="owl-item cloned" style="width: 350px; margin-right: 30px;">
                             <div class="bg-light">
                                 <div class="position-relative">
-                                    <img src="../../../../../assets/blog-1.jpg" alt="image" class="img-fluid w-100">
+                                    <img src="assets/blog-1.jpg" alt="image" class="img-fluid w-100">
                                     <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                         <h4 class="text-center text-white font-weight-medium mb-3;">Dolor site amet clita kasd sanct ipsum</h4>
                                         <div class="d-flex text-light">
@@ -120,7 +120,7 @@
                         <div class="owl-item cloned" style="width: 350px; margin-right: 30px;">
                             <div class="bg-light">
                                 <div class="position-relative">
-                                    <img src="../../../../../assets/blog-2.jpg" alt="image" class="img-fluid w-100">
+                                    <img src="assets/blog-2.jpg" alt="image" class="img-fluid w-100">
                                     <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                         <h4 class="text-center text-white font-weight-medium mb-3;">Dolor site amet clita kasd sanct ipsum</h4>
                                         <div class="d-flex text-light">
@@ -138,7 +138,7 @@
                         <div class="owl-item cloned" style="width: 350px; margin-right: 30px;">
                             <div class="bg-light">
                                 <div class="position-relative">
-                                    <img src="../../../../../assets/blog-3.jpg" alt="image" class="img-fluid w-100">
+                                    <img src="assets/blog-3.jpg" alt="image" class="img-fluid w-100">
                                     <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                         <h4 class="text-center text-white font-weight-medium mb-3;">Dolor site amet clita kasd sanct ipsum</h4>
                                         <div class="d-flex text-light">
@@ -156,7 +156,7 @@
                         <div class="owl-item cloned" style="width: 350px; margin-right: 30px;">
                             <div class="bg-light">
                                 <div class="position-relative">
-                                    <img src="../../../../../assets/blog-1.jpg" alt="image" class="img-fluid w-100">
+                                    <img src="assets/blog-1.jpg" alt="image" class="img-fluid w-100">
                                     <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                         <h4 class="text-center text-white font-weight-medium mb-3;">Dolor site amet clita kasd sanct ipsum</h4>
                                         <div class="d-flex text-light">
@@ -176,7 +176,7 @@
             <div class="mb-5">
                 <h3 class="font-weight-bold mb-4">3 Comments</h3>
                 <div class="media mb-4">
-                    <img src="../../../../../assets/user.jpg" alt="user-image" class="img-fluid me-3 mt-1" style="width: 45px;">
+                    <img src="assets/user.jpg" alt="user-image" class="img-fluid me-3 mt-1" style="width: 45px;">
                     <div class="media-body">
                         <h6>John Doe <small><i>01 Jan 2045 at 12:00pm</i></small></h6>
                         <p>Diam amet duo labore stet elitr invidunt ea clita ipsum voluptua, tempor labore accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed sed eirmod ipsum. Gubergren clita aliquyam consetetur sadipscing, at tempor amet ipsum diam tempor consetetur at sit.</p>
@@ -184,13 +184,13 @@
                     </div>
                 </div>
                 <div class="media mb-4">
-                    <img src="../../../../../assets/user.jpg" alt="user-image" class="img-fluid me-3 mt-1" style="width: 45px;">
+                    <img src="assets/user.jpg" alt="user-image" class="img-fluid me-3 mt-1" style="width: 45px;">
                     <div class="media-body">
                         <h6>John Doe <small><i>01 Jan 2045 at 12:00pm</i></small></h6>
                         <p>Diam amet duo labore stet elitr invidunt ea clita ipsum voluptua, tempor labore accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed sed eirmod ipsum. Gubergren clita aliquyam consetetur sadipscing, at tempor amet ipsum diam tempor consetetur at sit.</p>
                         <button class="btn btn-sm btn-light">Reply</button>
                         <div class="media mt-4">
-                            <img src="../../../../../assets/user.jpg" alt="user-image" class="img-fluid me-3 mt-1" style="width: 45px;">
+                            <img src="assets/user.jpg" alt="user-image" class="img-fluid me-3 mt-1" style="width: 45px;">
                             <div class="media-body">
                                 <h6>John Doe <small><i>01 Jan 2045 at 12:00pm</i></small></h6>
                                 <p>Diam amet duo labore stet elitr invidunt ea clita ipsum voluptua, tempor labore accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed sed eirmod ipsum. Gubergren clita aliquyam consetetur sadipscing, at tempor amet ipsum diam tempor consetetur at sit.</p>
@@ -228,7 +228,7 @@
         </div>
         <div class="col-lg-4 mt-5 mt-lg-0">
             <div class="d-flex flex-column text-center bg-secondary mb-5 py-5 px-4">
-                <img src="../../../../../assets/user.jpg" alt="user-image" class="rounded-circle bg-white shadow mx-auto mb-4" style="width: 100px; height: 100px; padding: 12px;" >
+                <img src="assets/user.jpg" alt="user-image" class="rounded-circle bg-white shadow mx-auto mb-4" style="width: 100px; height: 100px; padding: 12px;" >
                 <h3 class="text-primary mb-3">John Doe</h3>
                 <p class="text-white m-0">Conset elitr erat vero dolor ipsum et diam, eos dolor lorem ipsum, ipsum ipsum sit no ut est. Guber ea ipsum erat kasd amet est elitr ea sit.</p>
             </div>
@@ -270,12 +270,12 @@
                 </ul>
             </div>
             <div class="mb-5">
-                <img src="../../../../../assets/blog-1.jpg" alt="blog-image" class="img-fluid">
+                <img src="assets/blog-1.jpg" alt="blog-image" class="img-fluid">
             </div>
             <div class="mb-5">
                 <h3 class="font-weight-bold mb-4 tex">Recent Post</h3>
                 <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                    <img src="../../../../../assets/blog-1.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
+                    <img src="assets/blog-1.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
                     <div class="d-flex flex-column ps-3">
                         <a href="#" class="text-dark mb-2 ">Lorem ipsum dolor sit amet consec adipis elit</a>
                         <div class="d-flex">
@@ -286,7 +286,7 @@
                     </div>
                 </div>
                 <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                    <img src="../../../../../assets/blog-2.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
+                    <img src="assets/blog-2.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
                     <div class="d-flex flex-column ps-3">
                         <a href="#" class="text-dark mb-2 ">Lorem ipsum dolor sit amet consec adipis elit</a>
                         <div class="d-flex">
@@ -297,7 +297,7 @@
                     </div>
                 </div>
                 <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                    <img src="../../../../../assets/blog-3.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
+                    <img src="assets/blog-3.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
                     <div class="d-flex flex-column ps-3">
                         <a href="#" class="text-dark mb-2 ">Lorem ipsum dolor sit amet consec adipis elit</a>
                         <div class="d-flex">
@@ -308,7 +308,7 @@
                     </div>
                 </div>
                 <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                    <img src="../../../../../assets/blog-1.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
+                    <img src="assets/blog-1.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
                     <div class="d-flex flex-column ps-3">
                         <a href="#" class="text-dark mb-2 ">Lorem ipsum dolor sit amet consec adipis elit</a>
                         <div class="d-flex">
@@ -319,7 +319,7 @@
                     </div>
                 </div>
                 <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                    <img src="../../../../../assets/blog-2.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
+                    <img src="assets/blog-2.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
                     <div class="d-flex flex-column ps-3">
                         <a href="#" class="text-dark mb-2 ">Lorem ipsum dolor sit amet consec adipis elit</a>
                         <div class="d-flex">
@@ -331,7 +331,7 @@
                 </div>
             </div>
             <div class="mb-5">
-                <img src="../../../../../assets/blog-2.jpg" alt="blog-image" class="img-fluid">
+                <img src="assets/blog-2.jpg" alt="blog-image" class="img-fluid">
             </div>
             <div class="mb-5">
                 <h3 class="font-weight-bold mb-4">Tag Cloud</h3>
@@ -345,7 +345,7 @@
                 </div>
             </div>
             <div class="mb-5">
-                <img src="../../../../../assets/blog-3.jpg" alt="blog-image" class="img-fluid">
+                <img src="assets/blog-3.jpg" alt="blog-image" class="img-fluid">
             </div>
             <div>
                 <h3 class="font-weight-bold mb-4">Plain Text</h3>
