--- a/src/app/Components/admin/admin-about/admin-about.component.html
+++ b/src/app/Components/admin/admin-about/admin-about.component.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-5">
-                <img src="../../../../assets/about.jpg" alt="about-image" class="img-fluid">
+                <img src="assets/about.jpg" alt="about-image" class="img-fluid">
             </div>
             <div class="col-lg-7 mt-5 mt-lg-0 ps-lg-5">
                 <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Learn About Us</h6>
