--- a/src/app/Components/admin/admin-home/admin-home.component.html
+++ b/src/app/Components/admin/admin-home/admin-home.component.html
@@ -2,7 +2,7 @@
     <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/assets/carouselA.jpg" alt="First slide">
+      <img class="d-block w-100" src="assets/carousel-1.jpg" alt="First slide">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
         <div class="p-3" style="max-width: 900px;">
             <h4 class="text-white text-uppercase mb-md-4">Laundry & Dry Cleaning</h4>
@@ -12,7 +12,7 @@
     </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/assets/carouselB.jpg" alt="Second slide">
+      <img class="d-block w-100" src="assets/carousel-2.jpg" alt="Second slide">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
         <div class="p-3" style="max-width: 900px;">
             <h4 class="text-white text-uppercase mb-md-4">Laundry & Dry Cleaning</h4>
@@ -71,7 +71,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-5">
-                <img src="../../../../assets/about.jpg" alt="about-image" class="img-fluid">
+                <img src="assets/about.jpg" alt="about-image" class="img-fluid">
             </div>
             <div class="col-lg-7 mt-5 mt-lg-0 ps-lg-5">
                 <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Learn About Us</h6>
@@ -298,7 +298,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-1.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-1.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -312,7 +312,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-2.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-2.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -326,7 +326,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-3.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-3.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -340,7 +340,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-4.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-4.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -354,7 +354,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-1.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-1.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -368,7 +368,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-2.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-2.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -382,7 +382,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-3.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-3.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5">Client Name</h5>
                             <p class="text-muted font-italic">Proffession</p>
@@ -396,7 +396,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-4.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-4.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5">Client Name</h5>
                             <p class="text-muted font-italic">Proffession</p>
@@ -419,7 +419,7 @@
             <div class="col-lg-4 mb-2">
                 <div class="shadow mb-4">
                     <div class="position-relative">
-                        <img src="../../../../assets/blog-1.jpg" alt="image" class="img-fluid w-100">
+                        <img src="assets/blog-1.jpg" alt="image" class="img-fluid w-100">
                         <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                             <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                             <div class="d-flex text-light">
@@ -435,7 +435,7 @@
             <div class="col-lg-4 mb-2">
                 <div class="shadow mb-4">
                     <div class="position-relative">
-                        <img src="../../../../assets/blog-2.jpg" alt="image" class="img-fluid w-100">
+                        <img src="assets/blog-2.jpg" alt="image" class="img-fluid w-100">
                         <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                             <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                             <div class="d-flex text-light">
@@ -451,7 +451,7 @@
             <div class="col-lg-4 mb-2">
                 <div class="shadow mb-4">
                     <div class="position-relative">
-                        <img src="../../../../assets/blog-3.jpg" alt="image" class="img-fluid w-100">
+                        <img src="assets/blog-3.jpg" alt="image" class="img-fluid w-100">
                         <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                             <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                             <div class="d-flex text-light">
