--- a/src/app/Components/admin/admin-services/admin-services.component.html
+++ b/src/app/Components/admin/admin-services/admin-services.component.html
@@ -97,7 +97,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-1.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-1.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -111,7 +111,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-2.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-2.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -125,7 +125,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-3.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-3.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -139,7 +139,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-4.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-4.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -153,7 +153,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-1.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-1.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -167,7 +167,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-2.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-2.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5 text-primary">Client Name</h5>
                             <p class="text-muted font-italic"><em>Proffession</em></p>
@@ -181,7 +181,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-3.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-3.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5">Client Name</h5>
                             <p class="text-muted font-italic">Proffession</p>
@@ -195,7 +195,7 @@
             <ng-template carouselSlide>
                 <div class="owl-item cloned" style="width: 330px; margin-right: 30px;">
                     <div class="testimonial-item">
-                        <img src="../../../../assets/testimonial-4.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
+                        <img src="assets/testimonial-4.jpg" alt="testimonial-image" class="position-relative rounded-circle bg-white shadow mx-auto" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1; ">
                         <div class="bg-light text-center p-4">
                             <h5 class="font-weight-medium mt-5">Client Name</h5>
                             <p class="text-muted font-italic">Proffession</p>
