--- a/src/app/Components/admin/adminPages/blog-grid/blog-grid.component.html
+++ b/src/app/Components/admin/adminPages/blog-grid/blog-grid.component.html
@@ -22,7 +22,7 @@
                 <div class="col-md-6 mb-2">
                     <div class="bg-light mb-4">
                         <div class="position-relative">
-                            <img src="../../../../../assets/blog-1.jpg" alt="blog-image" class="img-fluid w-100">
+                            <img src="assets/blog-1.jpg" alt="blog-image" class="img-fluid w-100">
                             <a href="#" routerLink="/blogdetail" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                 <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                                 <div class="d-flex text-light">
@@ -44,7 +44,7 @@
                 <div class="col-md-6 mb-2">
                     <div class="bg-light mb-4">
                         <div class="position-relative">
-                            <img src="../../../../../assets/blog-2.jpg" alt="blog-image" class="img-fluid w-100">
+                            <img src="assets/blog-2.jpg" alt="blog-image" class="img-fluid w-100">
                             <a href="#" routerLink="/blogdetail" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                 <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                                 <div class="d-flex text-light">
@@ -66,7 +66,7 @@
                 <div class="col-md-6 mb-2">
                     <div class="bg-light mb-4">
                         <div class="position-relative">
-                            <img src="../../../../../assets/blog-3.jpg" alt="blog-image" class="img-fluid w-100">
+                            <img src="assets/blog-3.jpg" alt="blog-image" class="img-fluid w-100">
                             <a href="#" routerLink="/blogdetail" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                 <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                                 <div class="d-flex text-light">
@@ -88,7 +88,7 @@
                 <div class="col-md-6 mb-2">
                     <div class="bg-light mb-4">
                         <div class="position-relative">
-                            <img src="../../../../../assets/blog-1.jpg" alt="blog-image" class="img-fluid w-100">
+                            <img src="assets/blog-1.jpg" alt="blog-image" class="img-fluid w-100">
                             <a href="#" routerLink="/blogdetail" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                 <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                                 <div class="d-flex text-light">
@@ -110,7 +110,7 @@
                 <div class="col-md-6 mb-2">
                     <div class="bg-light mb-4">
                         <div class="position-relative">
-                            <img src="../../../../../assets/blog-2.jpg" alt="blog-image" class="img-fluid w-100">
+                            <img src="assets/blog-2.jpg" alt="blog-image" class="img-fluid w-100">
                             <a href="#" routerLink="/blogdetail" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                 <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                                 <div class="d-flex text-light">
@@ -132,7 +132,7 @@
                 <div class="col-md-6 mb-2">
                     <div class="bg-light mb-4">
                         <div class="position-relative">
-                            <img src="../../../../../assets/blog-3.jpg" alt="blog-image" class="img-fluid w-100">
+                            <img src="assets/blog-3.jpg" alt="blog-image" class="img-fluid w-100">
                             <a href="#" routerLink="/blogdetail" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                 <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                                 <div class="d-flex text-light">
@@ -154,7 +154,7 @@
                 <div class="col-md-6 mb-2">
                     <div class="bg-light mb-4">
                         <div class="position-relative">
-                            <img src="../../../../../assets/blog-1.jpg" alt="blog-image" class="img-fluid w-100">
+                            <img src="assets/blog-1.jpg" alt="blog-image" class="img-fluid w-100">
                             <a href="#" routerLink="/blogdetail" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                 <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                                 <div class="d-flex text-light">
@@ -176,7 +176,7 @@
                 <div class="col-md-6 mb-2">
                     <div class="bg-light mb-4">
                         <div class="position-relative">
-                            <img src="../../../../../assets/blog-2.jpg" alt="blog-image" class="img-fluid w-100">
+                            <img src="assets/blog-2.jpg" alt="blog-image" class="img-fluid w-100">
                             <a href="#" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                 <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                                 <div class="d-flex text-light">
@@ -198,7 +198,7 @@
                 <div class="col-md-6 mb-2">
                     <div class="bg-light mb-4">
                         <div class="position-relative">
-                            <img src="../../../../../assets/blog-3.jpg" alt="blog-image" class="img-fluid w-100">
+                            <img src="assets/blog-3.jpg" alt="blog-image" class="img-fluid w-100">
                             <a href="#" routerLink="/blogdetail" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                 <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                                 <div class="d-flex text-light">
@@ -220,7 +220,7 @@
                 <div class="col-md-6 mb-2">
                     <div class="bg-light mb-4">
                         <div class="position-relative">
-                            <img src="../../../../../assets/blog-1.jpg" alt="blog-image" class="img-fluid w-100">
+                            <img src="assets/blog-1.jpg" alt="blog-image" class="img-fluid w-100">
                             <a href="#" routerLink="/blogdetail" class="position-absolute w-100 h-100 d-flex flex-column align-items-center justify-content-center text-decoration-none p-4" style="top: 0; left: 0; background: rgba(0,0,0,.4);">
                                 <h4 class="text-center text-white font-weight-medium mb-3">Dolor site amet clita kasd sanct ipsum</h4>
                                 <div class="d-flex text-light">
@@ -314,7 +314,7 @@
             <div class="mb-5">
                 <h3 class="font-weight-bold mb-4 tex">Recent Post</h3>
                 <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                    <img src="../../../../../assets/blog-1.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
+                    <img src="assets/blog-1.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
                     <div class="d-flex flex-column ps-3">
                         <a href="#" routerLink="/blogdetail" class="text-dark mb-2 ">Lorem ipsum dolor sit amet consec adipis elit</a>
                         <div class="d-flex">
@@ -325,7 +325,7 @@
                     </div>
                 </div>
                 <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                    <img src="../../../../../assets/blog-2.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
+                    <img src="assets/blog-2.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
                     <div class="d-flex flex-column ps-3">
                         <a href="#" routerLink="/blogdetail" class="text-dark mb-2 ">Lorem ipsum dolor sit amet consec adipis elit</a>
                         <div class="d-flex">
@@ -336,7 +336,7 @@
                     </div>
                 </div>
                 <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                    <img src="../../../../../assets/blog-3.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
+                    <img src="assets/blog-3.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
                     <div class="d-flex flex-column ps-3">
                         <a href="#" class="text-dark mb-2 ">Lorem ipsum dolor sit amet consec adipis elit</a>
                         <div class="d-flex">
@@ -347,7 +347,7 @@
                     </div>
                 </div>
                 <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                    <img src="../../../../../assets/blog-1.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
+                    <img src="assets/blog-1.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
                     <div class="d-flex flex-column ps-3">
                         <a href="#" routerLink="/blogdetail" class="text-dark mb-2 ">Lorem ipsum dolor sit amet consec adipis elit</a>
                         <div class="d-flex">
@@ -358,7 +358,7 @@
                     </div>
                 </div>
                 <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                    <img src="../../../../../assets/blog-2.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
+                    <img src="assets/blog-2.jpg" alt="blog-image" class="img-fluid" style="width: 80px; height: 80px;">
                     <div class="d-flex flex-column ps-3">
                         <a href="#" routerLink="/blogdetail" class="text-dark mb-2 ">Lorem ipsum dolor sit amet consec adipis elit</a>
                         <div class="d-flex">
@@ -370,7 +370,7 @@
                 </div>
             </div>
             <div class="mb-5">
-                <img src="../../../../../assets/blog-2.jpg" alt="blog-image" class="img-fluid">
+                <img src="assets/blog-2.jpg" alt="blog-image" class="img-fluid">
             </div>
             <div class="mb-5">
                 <h3 class="font-weight-bold mb-4">Tag Cloud</h3>
@@ -384,7 +384,7 @@
                 </div>
             </div>
             <div class="mb-5">
-                <img src="../../../../../assets/blog-3.jpg" alt="blog-image" class="img-fluid">
+                <img src="assets/blog-3.jpg" alt="blog-image" class="img-fluid">
             </div>
             <div>
                 <h3 class="font-weight-bold mb-4">Plain Text</h3>
